--- a/latex/implicit_pde_solutions.tex
+++ b/latex/implicit_pde_solutions.tex
@@ -2,6 +2,8 @@
 
 \chapter{Stokes}
 
+This whole chapter is incomplete work. We started working toward stoke solutions on the unit sphere but it has yet to be completed. 
+
 \section{Introduction}
 
 We consider herein the solution to steady-state viscous Stokes flow on the surface of a sphere, governed by: 
@@ -440,36 +442,25 @@ Our tests show that an incomplete LU factorization with zero fill-in \cite{Saad2
 
 We also find that a large Krylov subspace must be saved. GMRES converges best when approximately 250 dimensions are saved between restarts. 
 
-{\color{blue} Plot comparing residual of GMRES without precond and with ILU0 }
+%TODO: Plot comparing residual of GMRES without precond and with ILU0 
 
-\authnote{ Need to comment on the conditioning of the system and how stencils can influence convergence }.
+%TODO:  Need to comment on the conditioning of the system and how stencils can influence convergence
+
+
 %\authnote{So my matlab code also demonstrates the behavior I was seeing in C++. The $n=31$ case converges VERY quickly with ILU0. However $n=40$ is slow. Another case that works well is $n=110$. I will have to go back and figure out how Im generating the stencils differently. I wonder if the $log(\kappa) = 14$ for $n=40$ is pushing conditioning too high to use? }
-GMRES in CUSP is based on the Givens rotations for the Arnoldi process. 
 
-GMRES in ViennaCL is based on Householder reflections for the Arnoldi process. 
+%TODO: demonstrate that ILU improve convergence rate (table showing 3 resolutions and convergence with and without ILU)
 
-We opted to leverage the ViennaCL package in most of our implementations. 
-
-Need a table/plot comparing convergence of various preconditioners (ILU0, ILUT, AMG, etc.). We will justify our use of ILU0 even if it is the most basic and frequently least beneficial approach.
-
-Demonstrate ILU0 is best for converging between 
-\begin{itemize}
-\item Jacobi
-\item ILU0 on block $(1:3*N)$
-\item ILU0 on full matrix
-\item ILUT
-\item AMG 
-\end{itemize} 
-
-\begin{algorithm}                     
-\caption{Incomplete LU Factorization with Zero Fill-in (ILU0)}         
-\label{alg:gmres}                        
-\begin{algorithmic}[1]                  
-    \For i = 0
-    \State $a_{i,i} = a_{i,i} / a_{i,i}$
-    \EndFor
-\end{algorithmic}
-\end{algorithm}
+%TODO: add ILU algorithm
+%\begin{algorithm}                     
+%\caption{Incomplete LU Factorization with Zero Fill-in (ILU0)}         
+%\label{alg:gmres}                        
+%\begin{algorithmic}[1]                  
+%    \For i = 0
+%    \State $a_{i,i} = a_{i,i} / a_{i,i}$
+%    \EndFor
+%\end{algorithmic}
+%\end{algorithm}
 
 \section{GMRES Results}
 
