--- a/latex/gpu_solver.tex
+++ b/latex/gpu_solver.tex
@@ -56,6 +56,7 @@ CPU growth is limited by power and size. In response, CPU designers for years ha
 To meet the demand for computer graphics GPUs are designed with emphasis on fast memory bandwidth, thousands of simple compute cores and features like 2-D and 3-D texture caching. 
 
 
+%TODO: CUDA MPI not a feature provided by OpenCL. 
 
 In recent years the 
 
