--- a/latex/introduction.tex
+++ b/latex/introduction.tex
@@ -133,6 +133,8 @@ The layout of this document is as follows. This chapter continues with a survey 
 
 \section{On Parallel/Distributed RBF-FD (Incomplete)} 
 
+%TODO: why implement independent of PETSc, Deal.II, Trilinos, etc. 
+
 %\authnote{Related work for start of Parallel/GPU chapter}
 Parallel implementations of RBF methods rely on \emph{domain decomposition}. Depending on the implementation, domain decomposition not only accelerates solution procedures, but can decrease the ill-conditioning that plague all global RBF methods (\cite{Divo2007}). The ill-conditioning is reduced if each domain is treated as a separate RBF domain, and the boundary update is treated separately. Domain decomposition methods for RBFs were introduced by Beatson et al. \cite{Beatson2000} in the year 2000 as a way to increase problem sizes into the millions of nodes.
 
